<resources>

    <string name="app_name">Scan on Table</string>
    <string name="FACEBOOK_APP_ID">1844297638951342</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">dffd34885e71346417fe3f25be3d676f</string>
    <string name="ak_login_protocol_scheme">akdffd34885e71346417fe3f25be3d676f</string>
    <string name="action_login_by_phone">Đăng nhập bằng Số Điện Thoại</string>
    <string name="action_login_by_facebook">Đăng nhập bằng Facebook</string>
    <string name="action_personal_info">Thông tin cá nhân</string>
    <string name="action_my_coupons">Coupon của tôi</string>
    <string name="action_order_history">Lịch sử đặt hàng</string>
    <string name="action_about_us">Về chúng tôi</string>
    <string name="action_contact">Liên hệ</string>
    <string name="action_policy">Quy định</string>
    <string name="title_hotline">Hotline: 1900 9999</string>
    <string name="title_version">©2018 Scan on Table. Ver 1.01</string>
    <string name="title_logout">Đăng xuất</string>
    <string name="action_checkout_orders">Xem giỏ hàng</string>
    <string name="title_order_detail">Chi tiết đơn hàng</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="title_delivery_info">Thông tin giao hàng</string>
    <string name="msg_input_delivery_info">Vui lòng nhập địa chỉ giao hàng tại đây.</string>
    <string name="title_voucher">Mã giảm giá</string>
    <string name="msg_voucher">Bạn có mã giảm giá? Nhập tại đây.</string>
    <string name="msg_notes">Bạn có muốn dặn dò gì không?</string>
    <string name="title_activity_order_history">OrderHistoryActivity</string>
    <string name="text_button_refresh">Bạn có chắc muốn Làm mới giỏ hàng?\n Chức năng này sẽ xoá tất cả món ăn đã chọn trước đó.  </string>

</resources>
