<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20">

                <LinearLayout
                    android:id="@+id/linear_layout_icon_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/dp15">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_back" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="@dimen/dp88"
                        android:layout_height="@dimen/dp88"
                        android:src="@mipmap/ic_avatar"
                        app:riv_corner_radius="@dimen/dp50" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:text="Lê Min Tín"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp18"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp6"
                        android:text="+84 3923 539"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/linear_layout_member_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginTop="@dimen/dp22"
                android:background="@drawable/background_profile"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp20"
                android:paddingLeft="@dimen/dp20"
                android:paddingRight="@dimen/dp10"
                android:paddingTop="@dimen/dp20"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thành viên mới"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp4"
                        android:text="32 điểm"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp18"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:text="Tài khoản"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp4"
                        android:text="120.000 đ"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp18"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="right|center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_view_more" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginTop="@dimen/dp8"
                android:background="@drawable/background_profile"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_layout_personal_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/dp18"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp10"
                    android:paddingTop="@dimen/dp18">

                    <ImageView
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:src="@mipmap/ic_personal_info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp18"
                        android:text="@string/action_personal_info"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_view_more" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_my_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/dp18"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp10"
                    android:paddingTop="@dimen/dp18">

                    <ImageView
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:src="@mipmap/ic_coupon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp18"
                        android:text="@string/action_my_coupons"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_view_more" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_order_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/dp18"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp10"
                    android:paddingTop="@dimen/dp18">

                    <ImageView
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:src="@mipmap/ic_order_history" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp18"
                        android:text="@string/action_order_history"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_view_more" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/dp18"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp10"
                    android:paddingTop="@dimen/dp18">

                    <ImageView
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:src="@mipmap/ic_about_us" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp18"
                        android:text="@string/action_about_us"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_view_more" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/dp18"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp10"
                    android:paddingTop="@dimen/dp18">

                    <ImageView
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:src="@mipmap/ic_policy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp18"
                        android:text="@string/action_policy"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_view_more" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/dp18"
                    android:paddingLeft="@dimen/dp18"
                    android:paddingRight="@dimen/dp10"
                    android:paddingTop="@dimen/dp18">

                    <ImageView
                        android:layout_width="@dimen/dp24"
                        android:layout_height="@dimen/dp24"
                        android:src="@mipmap/ic_contact" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp18"
                        android:text="@string/action_contact"
                        android:textColor="@color/light_black"
                        android:textSize="@dimen/sp14" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ic_view_more" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_hotline"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/sp16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp2"
                    android:text="@string/title_version"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/sp12" />

                <TextView
                    android:id="@+id/text_view_layout_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp24"
                    android:paddingTop="@dimen/dp24"
                    android:text="@string/title_logout"
                    android:textColor="@color/red"
                    android:textSize="@dimen/sp14"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>